# git-ai-commit

./: Cargo.toml  README.md
.gitea/workflows/: build.yaml
.github/workflows/: release.yml
cmd/git-ai-commit/: commit.go  commit_test.go  config.go  diff_parse.go  diff_sampling.go  diff_sampling_test.go  generate.go  git.go  main.go  main_test.go  message.go  message_test.go  openai.go  openai_test.go  prompt.go
internal/gitai/: cli.go  commit.go  commit_test.go  config.go  diff_parse.go  diff_sampling.go  diff_sampling_test.go  generate.go  git.go  main_test.go  message.go  message_test.go  openai.go  openai_test.go  prompt.go
src/: cli.rs  commit.rs  diff_parse.rs  generate.rs  git.rs  lib.rs  main.rs  message.rs  prompt.rs  provider_common.rs  provider_transport.rs  terminal_ui.rs  text_budget.rs  tokenizer.rs
src/anthropic/: mod.rs  request.rs  response.rs  transport.rs
src/commit/: alias.rs  args.rs  confirm.rs  doctor.rs
src/config/: mod.rs  provider.rs  sources.rs
src/config/tests/: basics.rs  booleans.rs  file_config.rs  mod.rs  precedence.rs  provider.rs  support.rs
src/diff_sampling/: budget.rs  mod.rs  notices.rs  sampling.rs  tests.rs
src/openai/: byot.rs  context.rs  mod.rs  request.rs  stream.rs  structured.rs
src/openai/response/: json.rs  mod.rs  models.rs  streaming.rs  tests.rs
src/redaction/: mod.rs
