[package]
name = "git-ai-commit"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { package = "cloudiful-config", version = "0.4.1" }
redactor = { package = "cloudiful-redactor", version = "0.2.5" }
reqwest = { version = "0.13.2", default-features = false, features = [ "blocking", "json", "rustls" ] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tiktoken-rs = "0.11.0"
