[package]
name = "git-ai-commit"
version = "0.1.2"
edition = "2024"

[dependencies]
async-openai = { version = "0.41.1", default-features = false, features = ["rustls", "responses", "chat-completion", "model"] }
clap = { version = "4.6.1", features = [ "derive" ] }
config = { package = "cloudiful-config", version = "0.6.3" }
futures = "0.3"
redactor = { package = "cloudiful-redactor", version = "0.3.1" }
reqwest = { version = "0.13.4", default-features = false, features = [ "json", "rustls" ] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tiktoken-rs = "0.12.0"
tokio = { version = "1", features = ["macros", "rt"] }
toml = "1"
